--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,8 @@ textarea {
 .body {
   text-align: center;
   margin-top: 11%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .body img {
@@ -183,6 +185,13 @@ textarea {
   box-shadow: 0 5px 5px 0 rgba(0,0,0,0.16), 0 0 0 2px rgba(0,0,0,0.08);
 }
 
+.searchbar_voc {
+  position: relative;
+  bottom: 33px;
+  left: 270px;
+  height:25px;
+  cursor: pointer;
+}
 /* SUBMIT BUTTON */
 
 .submit {
@@ -197,7 +206,7 @@ textarea {
   height: 35px;
   margin-right: 2px;
   margin-left: 2px;
-  margin-top: 25px;
+  margin-top: 10px;
 }
 
 .submit:hover {
@@ -233,6 +242,7 @@ textarea {
                       right: 0;
                       left: 0;
   padding-left: 30px;
+  min-width: 800px;
 }
 
 /* FOOTER TOP (COUNTRY) */
@@ -277,6 +287,8 @@ textarea {
 .span_right {
   position: absolute; right: 0;
 }
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
